Fix markdown header overflow and size

--- a/src/main/resources/static/less/devhub.less
+++ b/src/main/resources/static/less/devhub.less
@@ -90,10 +90,10 @@ h4 {
 
 h1 {
 	color: #000;
-	font-size: 60px;
+	font-size: 30px;
 	font-weight: 800;
-	font-style: bold;
-	margin: 0px;
+	margin: 0;
+	overflow-wrap: break-word;
 }
 
 .dropdown-menu {
